background jumping correction test

--- a/src/app.scss
+++ b/src/app.scss
@@ -12,7 +12,7 @@ html {
   font-family: "Source Code Pro", monospace;
 }
 
-body {
+.bgd {
   background-color: rgb(6, 32, 17);
   background-image: linear-gradient(
     -45deg,
@@ -20,36 +20,47 @@ body {
     70%,
     rgb(98, 100, 98)
   );
-  background-size: cover;
-  background-attachment: fixed;
-  color: white;
-  position: relative;
-  z-index: -1;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  /* z-index usage is up to you.. although there is no need of using it because the default stack context will work. */
+  z-index: -1; // this is optional
+}
 
+.content {
+  position: absolute;
+  // margin-top: 5rem;
+  left: 50%; 
+  transform: translateX(-50%);
+  width: 100%;
+  color: whitesmoke;
+  
   @keyframes beforeAnimation {
-    0%{
+    0% {
       top: 40%;
       right: 100%;
     }
-    50%{
+    50% {
       top: 20%;
       right: 50%;
     }
-    100%{
+    100% {
       top: 40%;
       right: 0%;
     }
   }
   @keyframes afterAnimation {
-    0%{
+    0% {
       top: 10%;
       right: 60%;
     }
-    50%{
+    50% {
       top: 20%;
       right: 10%;
     }
-    100%{
+    100% {
       top: 40%;
       right: 0%;
     }
@@ -96,8 +107,6 @@ a {
   justify-content: center;
   align-items: center;
   gap: 100px;
-
- 
 
   section {
     max-height: 100vh;
